@startuml

title __PROGMATIC's Class Diagram__\n

  namespace hu.progmatic {
    class hu.progmatic.Film {
        - cim : String
        - hossz : int
        - kiadasiEv : int
        - koltsegvetes : int
        - mufaj : String
        - mufajertekeles : int
        - nyilvantartasiSzam : String
        + Film()
        + Film()
        + Film()
        + getCim()
        + getErtekeles()
        + getFilmkockak()
        + getHossz()
        + getKiadasiEv()
        + getKoltsegvetes()
        + getKoltsegvetesiKategoria()
        + getMufaj()
        + getMufajErtekeles()
        + getNyilvantartasiSzam()
        + setCim()
        + setHossz()
        + setKiadasiEv()
        + setKoltsegvetes()
        + setMufaj()
        + toString()
    }
  }
  

  namespace hu.progmatic {
    class hu.progmatic.HorrorFilm {
        - voltBenneSzellem : boolean
        - voltBenneSzornyeteg : boolean
        + HorrorFilm()
        + HorrorFilm()
        + HorrorFilm()
        + getMufajErtekeles()
        + isVoltBenneSzellem()
        + isVoltBenneSzornyeteg()
        + setVoltBenneSzellem()
        + setVoltBenneSzornyeteg()
        + toString()
    }
  }
  

  namespace hu.progmatic {
    class hu.progmatic.Main {
        {static} + main()
    }
  }
  

  namespace hu.progmatic {
    class hu.progmatic.RomantikusFilm {
        - hazassagokSzama : int
        + RomantikusFilm()
        + RomantikusFilm()
        + RomantikusFilm()
        + getHazassagokSzama()
        + getMufajErtekeles()
        + setHazassagokSzama()
        + toString()
    }
  }
  

  namespace hu.progmatic {
    class hu.progmatic.Videoteka {
        - kazettaJegyzek : Film[]
        - kazettahelyekSzama : int
        + Videoteka()
        + addFilm()
        + deleteFilm()
        + getElsoSzabadHelyIndex()
        + getKazettaJegyzek()
        + getKazettahelyekSzama()
        + getSzabadHelyekSzama()
    }
  }
  

  namespace hu.progmatic {
    class hu.progmatic.WesternFilm {
        - voltakBenneIndianok : boolean
        + WesternFilm()
        + WesternFilm()
        + WesternFilm()
        + getMufajErtekeles()
        + isVoltakBenneIndianok()
        + setVoltakBenneIndianok()
        + toString()
    }
  }
  

  hu.progmatic.HorrorFilm -up-|> hu.progmatic.Film
  hu.progmatic.RomantikusFilm -up-|> hu.progmatic.Film
  hu.progmatic.WesternFilm -up-|> hu.progmatic.Film


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
